--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/3483fe6e6c.js" crossorigin="anonymous"></script>
+
   <meta charset="utf-8">
   <title>MyFirstApp</title>
   <base href="/">
